musicleague/static/css/league_6.css
#title-bar {
    padding-bottom: 0;
}
#title-bar .league-created {
    display: block;
    font-size: 18px;
    line-height: 19px;
    margin-bottom: 25px;
}
#title-bar .league-title {
    display: block;
    font-family: 'Cubano', sans-serif;
    font-size: 60px;
    line-height: 60px;
    margin-bottom: 25px;
    overflow: hidden;
    text-overflow: ellipsis;
}
#title-bar .join-league-btn,
#title-bar .share-league-btn {
    background: none;
    border: 2px solid #ffffff;
    border-radius: 8px;
    display: inline-table;
    height: 40px;
    outline: none;
    padding: 0;
    vertical-align: middle;
}
#title-bar .join-league-btn .text,
#title-bar .share-league-btn .text {
    color: #ffffff;
    display: table-cell;
    font-family: 'Cubano', sans-serif;
    font-size: 18px;
    margin: 0;
    padding: 0 0;
    text-decoration: none;
    vertical-align: middle;
}
#title-bar .join-league-btn .gold-star,
#title-bar .share-league-btn .gold-star {
    padding: 0 10px;
    display: table-cell;
    vertical-align: middle;
}
#title-bar .join-league-btn .gold-star img,
#title-bar .share-league-btn .gold-star img {
    vertical-align: middle;
}
#title-bar .leaderboard-label {
    color: #fff;
    font-family: 'Cubano', sans-serif;
    font-size: 18px;
    line-height: 22px;
}
#title-bar .leaderboard-link {
    color: #F8C62C;
    font-family: 'Cubano', sans-serif;
    font-size: 18px;
    line-height: 22px;
}
#title-bar .top-rankings {
    background-color: rgba(1, 36, 154, 0.85);
    border-radius: 8px;
    padding: 20px 0px;
    text-align: left;
}
#title-bar .top-rankings .rank {
    display: inline-block;
    height: 25px;
    vertical-align: middle;
    width: 25px;
}
#title-bar .top-rankings .rank.first { background: url('https://s3.amazonaws.com/musicleague-static-assets/icons/01.svg'); }
#title-bar .top-rankings .rank.second { background: url('https://s3.amazonaws.com/musicleague-static-assets/icons/02.svg'); }
#title-bar .top-rankings .rank.third { background: url('https://s3.amazonaws.com/musicleague-static-assets/icons/03.svg'); }

#title-bar .top-rankings .point-count {
    color: #F8C62C;
    font-family: 'Cubano', sans-serif;
    font-size: 48px;
    line-height: 52px;
}

#title-bar .top-rankings .name {
    color: #fff;
    font-family: 'Cubano', sans-serif;
    font-size: 20px;
    line-height: 24px;
}
#title-bar .members {
    font-size: 18px;
    line-height: 40px;
}
#title-bar .visible-xs .members {
    margin-bottom: 20px;
}
#title-bar .members img {
    height: 40px;
    width: 40px;
}

#title-bar .members .members-toggle {
    background: url('https://s3.amazonaws.com/musicleague-static-assets/icons/expand_icon.svg');
    background-repeat: no-repeat;
    cursor: pointer;
    display: inline-block;
    height: 40px;
    margin-left: 10px;
    vertical-align: middle;
    width: 40px;
}

#title-bar .members #members-collapse #members-container {
    background-color: rgba(0, 37, 154, 0.85);
    border: 3px solid #fff;
    border-radius: 8px;
    color: #fff;
    font-size: 14px;
    line-height: 19px;
    margin-top: 25px;
    padding: 25px 0px;
}

#status-bar {
    background-color: #02B8EF;
    color: #fff;
    padding: 50px 10px;
    width: 100%;
}
#status-bar .call-for-action {
    color: #fff;
    display: block;
    font-family: 'Cubano', sans-serif;
    font-size: 24px;
    line-height: 29px;
    margin-bottom: 25px;
}
#status-bar .round-bar { background: none; padding: 0; }
#status-bar .round-bar .round-status-icon.current { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/swords_white.svg"); background-repeat: no-repeat; }
#status-bar .round-bar .round-title { color: #fff; }
#status-bar .round-bar .status-text { color: #fff; margin: 15px 0px; }

#status-bar .action-progress { display: block; }

#status-bar .round-bar .action-required { color: #fff; }
#status-bar .round-bar .action-link .action-button.change { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/change_white.svg"); background-repeat: no-repeat; }
#status-bar .round-bar .action-link .action-button.clock { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/clock_gray.svg"); background-repeat: no-repeat; }
#status-bar .round-bar .action-link .action-button.playlist { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/playlist_icon_white.svg"); background-repeat: no-repeat; }
#status-bar .round-bar .action-link .action-button.results { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/results_icon_white.svg"); background-repeat: no-repeat;}
#status-bar .round-bar .action-link .action-button.submit { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/submit_white.svg"); background-repeat: no-repeat; width: 79px; }
#status-bar .round-bar .action-link .action-button.vote { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/vote_white.svg"); background-repeat: no-repeat; }
#status-bar .round-bar .action-text { color: #fff; }

#status-bar .round-bar.current .right-action { border-left: 3px solid #FFF; }

#status-bar .round-divider { display: none; }

.round-bar {
    padding: 45px 10px;
}
.round-bar:nth-child(even) {
    background-color: #F7F7F7;
}
.round-bar .round-status-icon {
    background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/clock_gray.svg");
    display: inline-block;
    height: 90px;
    margin: 0px;
    width: 90px;
}
.round-bar .round-status-icon.complete { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/completed_league_icon.svg") }
.round-bar .round-status-icon.current {
    background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/live_league_icon.svg");
    width: 86px;
}

.round-bar .round-title {
    color: #c0c0c0;
    display: inline-block;
    font-family: 'Cubano', sans-serif;
    font-size: 24px;
    line-height: 29px;
    vertical-align: top;
}
.round-bar .round-title.current { color: #02B8EF; }
.round-bar .round-title.complete { color: #00259A; }

.round-bar .status-text {
    color: #c0c0c0;
    display: block;
    font-size: 14px;
    line-height: 19px;
    margin: 10px 0px;
}
.round-bar .status-text.current { color: #02B8EF; }
.round-bar .status-text.complete { color: #00259A; }

.round-bar .action-progress { display: none; }
.round-bar .action-progress a:hover,
.round-bar .action-progress a:active,
.round-bar .action-progress a:focus { text-decoration: none; }

.round-bar .action-progress .text-progress {
    display: block;
    font-family: 'Cubano', sans-serif;
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 10px;
}

.round-bar .action-progress .text-progress .emphasize {
    color: #F8C62C;
    display: block;
    font-size: 36px;
    line-height: 40px;
}

.round-bar .action-progress .bar-progress { border: none; border-radius: 0px; margin-bottom: 0px; }
.round-bar .action-progress .bar-progress .progress-bar { background-color: #F8C62C; border: none; }

.round-bar .action-required {
    color: #02B8EF;
    display: inline;
    font-family: 'Cubano', sans-serif;
    font-size: 14px;
    height: 90px;
    line-height: 17px;
    vertical-align: middle;
}

.round-bar .action-required .emphasize { color: #F8C62C; }

.round-bar .action-link:visited,
.round-bar .action-link:hover,
.round-bar .action-link:active,
.round-bar .action-link:visited .action-text,
.round-bar .action-link:hover .action-text,
.round-bar .action-link:active .action-text { text-decoration: none; }

.round-bar .action-link .action-button {
    background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/clock_gray.svg");
    display: inline-block;
    height: 80px;
    width: 80px;
}
.round-bar .action-link .action-button.change { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/change_lightblue.svg"); background-repeat: no-repeat; }
.round-bar .action-link .action-button.playlist { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/playlist_icon_blue.svg"); background-repeat: no-repeat; }
.round-bar .action-link .action-button.playlist.current { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/playlist_icon_lightblue.svg"); background-repeat: no-repeat; }
.round-bar .action-link .action-button.results { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/results_icon.svg"); background-repeat: no-repeat; }
.round-bar .action-link .action-button.results.current { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/results_icon_lightblue.svg"); background-repeat: no-repeat; }
.round-bar .action-link .action-button.submit { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/submit_lightblue.svg"); background-repeat: no-repeat; width: 79px; }
.round-bar .action-link .action-button.vote { background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/vote_lightblue.svg"); background-repeat: no-repeat; }

.round-bar .action-link .action-text {
    color: #c0c0c0;
    display: block;
    font-family: 'Cubano', sans-serif;
    font-size: 12px;
    line-height: 17px;
    margin: 0 5px;
}
.round-bar .action-link .action-text.current { color: #02B8EF; }
.round-bar .action-link .action-text.complete { color: #00259A; }

.round-bar.current .right-action { border-left: 3px solid #02B8EF; padding: 10px 0; }
.round-bar.complete .right-action { border-left: 3px solid #01249A; padding: 10px 0; }


.popover-content-wrapper { display: none; }

.popover.bottom {
    background: none;
    border: 3px solid #fff;
    border-radius: 8px;
    box-shadow: none;
    margin-top: 25px;
    max-width: 100%;
    margin-top: 25px;
    overflow: hidden;
    padding: 0px;
}

.popover.full-width.bottom {
    width: 100%;
}

.popover > .popover-content {
    background: none;
    padding: 0px;
}

#members-popover,
#copied-popover {
    background-color: rgba(0, 37, 154, .85);
    color: #fff;
    padding: 25px 25px;
}
#copied-popover { text-transform: uppercase; padding: 10px 25px; }
#members-popover .member {
    display: inline-block;
    margin: 10px 0px;
}
#members-popover .member img {
    background: #fff;
    border: 2px solid #fff;
    display: inline-block;
    height: 50px;
    width: 50px;
}
#members-popover .member .owner-star {
    background: url("https://s3.amazonaws.com/musicleague-static-assets/icons/star_lightblue.svg");
    display: inline-block;
    height: 19px;
    position: absolute;
        left: 6px;
        top: 0px;
    width: 20px;
}

#members-popover .member .member-name {
    color: #fff;
    margin-left: 10px;
}

.progress-toggle { cursor: pointer; }

#progress-popover {}
#progress-popover .progress-title {
    display: block;
    font-family: 'Cubano', sans-serif;
    font-size: 18px;
    line-height: 24px;
    margin-bottom: 20px;
}
#progress-popover #acted, #progress-popover #waiting { padding: 20px; }
#progress-popover #acted .member-name,
#progress-popover #waiting .member-name {
    display: block;
    font-size: 14px;
    line-height: 18px;
    display: block;
}
#progress-popover #acted { background: #F8C62C }
#progress-popover #waiting { background: rgba(0,37,154,.85) }

.row-height {
  display: table;
  table-layout: fixed;
  height: 100%;
  width: 100%;
}
.col-height {
  display: table-cell;
  float: none;
  height: 100%;
}
.col-top {
  vertical-align: top;
}
.col-middle {
  vertical-align: middle;
}
.col-bottom {
  vertical-align: bottom;
}

